--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
+    "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "neo4j-driver": "^1.4.0",
     "nodemon": "^1.11.0",
-    "react-upload-file": "^2.0.0-beta.6",
     "winston": "^2.3.1"
   }
 }
