--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hammad Uzair",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
     "multer": "^1.3.0",
