--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Hammad Uzair",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.122.0",
     "body-parser": "^1.18.2",
+    "csv-parse": "^1.2.3",
     "express": "^4.15.4",
+    "file-system": "^2.2.2",
     "mongodb": "^2.2.31",
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
