--- a/AwsConfig.json
+++ b/AwsConfig.json
@@ -1,5 +1,5 @@
 {
-    "accessKeyId": "AKIAILVP3GT7PGOULCYA",
-    "secretAccessKey": "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",
+    "accessKeyId": "",
+    "secretAccessKey": "",
     "region": "ap-south-1"
   }
